# paper-c-ida-opensees-repro

./: .gitignore  CITATION.cff  DATASETS_AND_LINKS.csv  EXECUTION_CHECKLIST.csv  PACKAGE_FILE_MANIFEST_SHA256.csv  README.md  REPRODUCIBLE_RUNBOOK.md
scaffold/: .gitignore  README.md  pyproject.toml
scaffold/configs/: default.yaml  full.yaml  pilot.yaml
scaffold/data/: run_meta_template.json  specimen_table_pilot_v1.csv  specimen_table_template.csv
scaffold/data/expanded_pilot_v2/: selected_FF22.csv  selected_FFext.csv  selected_NF28.csv
scaffold/data/formal_pilot_v1/: selected_FF22.csv  selected_FFext.csv
scaffold/data/full_pool_resampling_r36/: eligible_FF22.csv  eligible_FFext.csv  eligible_NF28.csv  r36_censored_mle_by_subset.csv  r36_collapse_observations.csv  r36_data_leakage_checks.csv  r36_eligible_pool_summary.csv  r36_full_pool_subset_manifest.csv  r36_ida_raw_all.csv  r36_protocol_effect_distribution.csv  r36_run_bank_execution_history.csv  r36_run_completion_cache.csv  (+2 more)
scaffold/tests/: conftest.py  test_at2_reader.py  test_beta_decomposition.py  test_config_and_mle.py  test_opensees_tcl_motion_reader.py  test_postprocess_collapse_mechanism.py  test_postprocess_collect_runs.py  test_postprocess_pipeline.py
scaffold/tools/: build_gm_manifest_and_spectral_shape.py  demo_run_pipeline.py  ida_run_pilot_stub.py  make_figures_demo.py  make_protocol_effect_ledger.py  opensees_run_single_demo.py  run_compare_pilot_sets.py  run_full_pool_resampling_r36.py  run_protocol_split_r34.py  run_resampling_r1.py  run_sensitivity_v3.py  run_threshold_sensitivity_v4.py
(+56 files in other folders)
